--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,9 @@
             </ul>
         </nav>
     </div>
+    <div id="particles-js"></div>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="{{ base.url | prepend: site.url }}/assets/js/app.js"></script>
     <main class="page-content" aria-label="Content">
         <div class="wrapper">
             {{ content }}
