--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -11,7 +11,7 @@ nav {
     header {
       font-weight: 700;
       text-align: center;
-      margin-bottom: $medium-gap;
+      margin-bottom: $small-gap;
   
       @media #{$small} {
         float: left;
@@ -26,7 +26,7 @@ nav {
       list-style: none;
       display: block;
       text-align: center;
-  
+
       @media #{$small} {
         float: right;
         text-align: right;
@@ -48,4 +48,17 @@ nav {
         }
       }
     }
-  }
+}
+
+.nav-bar {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: $page-max-width;
+    margin: 0 auto;
+    padding: $small-gap $small-gap $small-gap;
+  
+    @media #{$small} {
+      padding: $medium-gap $medium-gap $huge-gap;
+    }
+}
