Add styling to particles.js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,17 @@
             </ul>
         </nav>
     </div>
-    <div id="particles-js"></div>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script src="{{ base.url | prepend: site.url }}/assets/js/app.js"></script>
-    <main class="page-content" aria-label="Content">
+    {% if page.name == 'resume.md' %}
+    {% assign title = site.canvas.resume %}
+    {% assign tag = 'resume' %}
+    {% elsif page.name == 'about.html' %}
+    {% assign title = site.canvas.about %}
+    {% assign tag = 'about' %}
+    {%- endif -%}
+    {% if title %}
+    {% include canvas.html %}
+    {%- endif -%}
+    <main class="page-content" aria-label="Content" id="page-content">
         <div class="wrapper">
             {{ content }}
         </div>
