--- a/_sass/utils/_colors.scss
+++ b/_sass/utils/_colors.scss
@@ -11,5 +11,6 @@ $orange-color:     #f6410a !default;
 /**
   * Background colors
   */
-$dark-background-color: rgba(12, 8, 3, 0.85);
+$dark-background-color: rgba(5, 3, 1, .98);
+$transparent-dark-background-color: rgba(5, 3, 1, 0.80);
 $page-content-color:    #fdfdfd !default;
