--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
     {%- seo -%}
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+    <link rel="shortcut icon" type="image/png" href="{{ "/assets/favicon.png" | relative_url }}">
     {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
