--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -67,8 +67,8 @@
 
 .footer {
     background: $dark-background-color;
-    padding: 10px 0;
-    margin-top: 100px;
+    margin-top:auto; 
+    padding: 15px 0;
     text-align: center;
     color: #FFF;
     .love {
