--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -4,18 +4,26 @@
       margin-bottom: $huge-gap;
       text-align: center;
   
-      a {
-        padding: 0 $small-gap;
-  
-        &:before {
-          font-size: $h1-font-size;
-        }
-      }
-  
+        
       i {
         font-size: $h1-font-size;
         height: $h1-font-size;
         width: 0.8 * $h1-font-size;
+      }
+
+      a {
+        padding: 0 $small-gap;
+        color: $grey-color-dark;
+
+  
+        &:before {
+          font-size: $h1-font-size;
+        }
+        &:active,
+        &:hover {
+          color: $accent-color;
+        }
+      
       }
     }
   
