--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
     {%- endif -%}
     {% if title %}
     {% include canvas.html %}
+    {% else %}
+    <div class="filler"></div>
     {%- endif -%}
     <main class="page-content" aria-label="Content" id="page-content">
         <div class="wrapper">
