--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,6 +14,10 @@
  /**
   * Basic styling
   */
+ html, body {
+  overflow-x: hidden;
+ }
+
  body {
    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
    color: $text-color;
@@ -27,6 +31,11 @@
    display: flex;
    min-height: 100vh;
    flex-direction: column;
+   overflow: hidden;
+   width: 100%;
+   -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+           box-sizing: border-box;
  }
  
  
@@ -123,6 +132,7 @@
   text-decoration: none;
   &.title {
     color: $grey-color-light;
+    font-size: $medium-font-size;
   }
 
   &:active,
