--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -16,7 +16,6 @@ nav {
       @media #{$small} {
         float: left;
         text-align: left;
-        margin-bottom: 0;
       }
     }
   
@@ -56,7 +55,7 @@ nav {
     height: 100%;
     max-width: $page-max-width;
     margin: 0 auto;
-    padding: $small-gap $small-gap $small-gap;
+    padding: $medium-gap $small-gap $small-gap;
   
     @media #{$small} {
       padding: $medium-gap $medium-gap $huge-gap;
