--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,8 +5,10 @@
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
+$big-font-size:    $base-font-size * 1.8 !default;
+$medium-font-size: $base-font-size * 1.4 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
-$h1-font-size: rem-calc(30);
+$h1-font-size:     rem-calc(30);
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
@@ -14,11 +16,11 @@ $table-text-align: left !default;
 
 $page-max-width: rem-calc(1280);
 $extra-huge-gap: rem-calc(80);
-$huge-gap: rem-calc(50);
-$big-gap: rem-calc(35);
-$medium-gap: rem-calc(25);
-$small-gap: rem-calc(10);
-$tiny-gap: rem-calc(5);
+$huge-gap:       rem-calc(50);
+$big-gap:        rem-calc(35);
+$medium-gap:     rem-calc(25);
+$small-gap:      rem-calc(10);
+$tiny-gap:       rem-calc(5);
 
 
 // Width of the content area
