--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -53,9 +53,9 @@ nav {
     position: relative;
     width: 100%;
     height: 100%;
-    max-width: $page-max-width;
+    // max-width: $page-max-width;
     margin: 0 auto;
-    padding: $medium-gap $small-gap $small-gap;
+    padding: $huge-gap $small-gap $medium-gap;
   
     @media #{$small} {
       padding: $medium-gap $medium-gap $huge-gap;
