Try adding width: 100% to page-content

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -124,6 +124,7 @@
    * Page content
    */
   .page-content {
+    width: 100%;
     min-height: 60vh;
     padding: $spacing-unit 0;
     flex: 1 0 auto;
