--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-<article class="post">
+<div class="page">
 
-    <div class="post-content">
+    <div class="page-content">
         {{ content }}
     </div>
 
-</article>
+</div>
