--- a/_sass/components/_canvas.scss
+++ b/_sass/components/_canvas.scss
@@ -10,30 +10,34 @@
   .header {
     font-family: 'Playfair Display';
     z-index: 1;
-    text-align: left;
-    color:#FFF;
+    text-align: center;
+    color: #FFF;
     position: absolute;
     top: 50%;
     left: 50%;
     margin: 0 auto;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+
     .site-title {
       font-size: 50px;
       display: block;
       line-height: 1;
       color: #FFF;
+
       @media #{$small} {
         margin: 0;
         font-size: 76px;
       }
     }
+
     .site-description {
       font-size: 20px;
       display: block;
       line-height: 1;
       color: #FFF;
       margin-top: 10px;
+
       @media #{$small} {
         font-size: 34px;
       }
@@ -42,11 +46,13 @@
 
   .header-links {
     margin: 10px;
+
     .link {
       color: #FFF;
       text-decoration: none;
       font-size: 15px;
       margin: 10px;
+
       @media #{$small} {
         font-size: 20px;
       }
@@ -59,6 +65,7 @@
     align-items: center;
 
     text-align: center;
+
     a {
       // no borders
       outline: 0 !important;
@@ -69,6 +76,7 @@
       padding: none;
       margin: none;
     }
+
     .icon {
       text-align: center;
       color: #FFF;
@@ -80,15 +88,18 @@
       border-radius: 50%;
       border: 2px solid #FFF;
       transition: all .5s;
+
       &:hover {
         color: $dark-background-color;
         background: #FFF;
       }
+
       &:active {
         color: $dark-background-color;
         background: #FFF;
       }
-      @media #{$small}  {
+
+      @media #{$small} {
         width: 30px;
         height: 30px;
         font-size: 30px;
@@ -111,25 +122,28 @@
     border: none !important;
     outline-style: none !important;
     -moz-outline-style: none !important;
+
     .icon {
-        position: absolute;
-        -webkit-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        width: 100px;
-        height: 100px;
-        fill: #fff;
-        -webkit-animation: pulse 1.3s infinite;
-        animation: pulse 1.3s infinite;
-        &:hover {
-          color: $accent-color;
-        }
-        &:active {
-          color: $accent-color;
-        }
+      position: absolute;
+      -webkit-transform-style: preserve-3d;
+      transform-style: preserve-3d;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      width: 100px;
+      height: 100px;
+      fill: #fff;
+      -webkit-animation: pulse 1.3s infinite;
+      animation: pulse 1.3s infinite;
+
+      &:hover {
+        color: $accent-color;
+      }
+
+      &:active {
+        color: $accent-color;
+      }
     }
   }
 }
