--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
     {%- if site.posts.size > 0 -%}
     <ul class="post-list">
         {%- for post in site.posts -%}
-        <li>
+        <li class="post-info">
             <h3>
                 <a class="post-link" href="{{ post.url | relative_url }}">
                     {{ post.title | escape }}
