--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,12 @@ layout: default
                 {{ page.date | date: date_format }}
             </time>
             {%- if page.author -%}
-            • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
-                    itemprop="name">{{ page.author | escape }}</span></span>
-            {%- endif -%}</p>
+            • <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+                <span class="p-author h-card" itemprop="name">{{ page.author | escape }}</span>
+            </span>
+            {%- endif -%}
+            {% include reading_time.html text=content %}
+        </p>
     </header>
 
     <div class="post-content e-content" itemprop="articleBody">
