--- a/_sass/utils/_functions.scss
+++ b/_sass/utils/_functions.scss
@@ -4,8 +4,13 @@ $rem-base: 18px;
   @return $num / ($num * 0 + 1);
 }
 
-@function rem-calc($value, $base-value: $rem-base)  {
+@function rem-calc($value, $base-value: $rem-base) {
   $value: strip-unit($value) / strip-unit($base-value) * 1rem;
-  @if ($value == 0rem) { $value: 0; } // Turn 0rem into 0
+
+  @if ($value==0rem) {
+    $value: 0;
+  }
+
+  // Turn 0rem into 0
   @return $value;
 }
