Use div instead of table to make UI adaptable for mobile

--- a/_includes/canvas.html
+++ b/_includes/canvas.html
@@ -4,7 +4,8 @@
             <span class="site-title">{{ title }}</span>
         </h1>
         {% if tag == 'resume' %}
-        <a target="_blank" class="button light capitalize styled_title"><i class="fa fa-download"></i> Download Resume</a>
+        <a target="_blank" class="button light capitalize styled_title nowrap"><i class="fa fa-download"></i> Download
+            Resume</a>
         {%- endif -%}
     </div>
     <a class="down" href="#{{tag}}" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
