--- a/_sass/components/_canvas.scss
+++ b/_sass/components/_canvas.scss
@@ -10,7 +10,7 @@
   .header {
     font-family: 'Playfair Display';
     z-index: 1;
-    text-align: center;
+    text-align: left;
     color: #FFF;
     position: absolute;
     top: 50%;
