--- a/_sass/pages/_resume.scss
+++ b/_sass/pages/_resume.scss
@@ -1,30 +1,13 @@
 .resume {
-    background-color: lighten($grey-color-light, 3%);
-    padding: $big-spacing-unit 0;
+    width: 100%;
+    * {
+        box-sizing: border-box;
+    }
 
-    table {
-        transition: all 2s;
-        border: None;
-        color: #1f1e1e;
-        margin: 3rem auto;
-        @include relative-font-size(0.9);
+    .resume_wrapper {
+        padding: $big-spacing-unit 0;
+        background-color: lighten($grey-color-light, 3%);
 
-        th,
-        td,
-        tr {
-            border: None;
-            background-color: transparent;
-        }
-
-        li {
-            &:before {
-                @include dot-tinygap;
-            }
-        }
-
-        p {
-            line-height: 26px;
-        }
     }
 
     .resume_title {
@@ -32,7 +15,7 @@
         vertical-align: top;
         text-align: center;
     }
-    
+
     .resume_subtitle {
         @include relative-font-size(.80);
         letter-spacing: 0.10em;
@@ -40,10 +23,10 @@
         font-weight: 700;
         text-transform: uppercase;
     }
-    
+
     .resume_company {
         font-weight: 600;
-    
+
         a {
             border-bottom: 1px solid $visited-accent-color;
             color: $accent-color;
@@ -57,12 +40,57 @@
             }
         }
     }
-    
+
     .work_exp {
         padding-bottom: 2rem;
-        margin-right: 8rem;
         text-align: justify;
     }
+
+    .title {
+        float: left;
+        width: 30%;
+        padding: 10px;
+    }
+    .column {
+        float: left;
+        padding: 10px;
+    }
+    .row {
+        transition: all 2s;
+        border: None;
+        color: #1f1e1e;
+        @include relative-font-size(0.9);
+    }
+    /* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+        padding-bottom: 2rem;
+    }
+
+    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+    @media screen and (max-width: 600px) {
+        .title {
+            float: None;
+            width: 100%;
+            text-align: center;
+        }
+        .column {
+            width: 100%;
+        }
+    }
+
+    li {
+        &:before {
+            @include dot-tinygap;
+        }
+    }
+
+    p {
+        line-height: 26px;
+    }
+    
 }
 
 .more {
