Add personal project and resume pdf

--- a/_includes/canvas.html
+++ b/_includes/canvas.html
@@ -2,10 +2,11 @@
     <div>
         <div class="header">
             <h1>
-                <span class="site-title nowrap">{{ title }}</span>
+                <span class="site-title">{{ title }}</span>
             </h1>
             {% if tag == 'resume' %}
-            <a target="_blank" class="button light capitalize styled_title nowrap">
+            <a href="{{ base.url | prepend: site.url }}/assets/pdf/Yueh_Liu_Resume.pdf" class="button light capitalize styled_title nowrap"
+                download>
                 <i class="fa fa-download"></i>
                 Download Resume</a>
             {%- endif -%}
