--- a/_sass/components/_canvas.scss
+++ b/_sass/components/_canvas.scss
@@ -19,12 +19,14 @@
     transform:translateX(-50%);
 
     .site-title {
+      width: 300px;
       font-size: 50px;
       display: block;
       line-height: 1;
       color: #FFF;
 
       @media #{$small} {
+        width: 500px;
         margin: 0;
         font-size: 76px;
       }
@@ -97,7 +99,7 @@
   .down {
     color: #FFF;
     position: absolute;
-    bottom: 25px;
+    bottom: 20px;
     width: 100%;
     margin: 0 auto;
     display: block;
