--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -2,6 +2,7 @@
     margin-top: 2rem;
     
     .post-info {
+        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
         border: 1px solid $grey-color-light;
         padding: 2rem;
     }
