Rename blog to articles, add grid-list views to articles, update resume

--- a/_includes/canvas.html
+++ b/_includes/canvas.html
@@ -5,7 +5,7 @@
                 <span class="site-title">{{ title }}</span>
             </h1>
             {% if tag == 'resume' %}
-            <a href="{{ base.url | prepend: site.url }}/assets/pdf/Yueh_Liu_Resume.pdf" class="button light capitalize styled_title nowrap"
+            <a href="{{ base.url | prepend: site.url }}/assets/pdf/Yueh_Liu_Resume.pdf" class="button-styled light capitalize styled_title nowrap"
                 download>
                 <i class="fa fa-download"></i>
                 Download Resume</a>
