--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 ---
 
 <div class="home">
@@ -9,24 +9,6 @@ layout: default
 
     {{ content }}
 
-    {%- if site.posts.size > 0 -%}
-    <ul class="post-list">
-        {%- for post in site.posts -%}
-        <li class="post-info">
-            <h3>
-                <a class="post-link" href="{{ post.url | relative_url }}">
-                    {{ post.title | escape }}
-                </a>
-            </h3>
-            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-            <span class="post-meta">{{ post.date | date: date_format }}</span>
-            {%- if site.show_excerpts -%}
-            {{ post.excerpt }}
-            {%- endif -%}
-        </li>
-        {%- endfor -%}
-    </ul>
-
     <p class="feed-subscribe">
         <!-- <a href="{{ 'feed.xml' | relative_url }}">
             <svg class="svg-icon orange">
@@ -34,6 +16,5 @@ layout: default
             </svg><span>Subscribe</span>
         </a> -->
     </p>
-    {%- endif -%}
 
 </div>
