--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -21,6 +21,7 @@
   
     @include media-query($on-palm) {
       padding-right: 45px;
+      padding-left: 45px;
     }
   
     &,
@@ -73,7 +74,7 @@
       display: block;
       padding-bottom: 5px;
     }
-  
+
     .page-link {
       color: $text-color;
       line-height: $base-line-height;
@@ -123,6 +124,14 @@
   /**
    * Page content
    */
+  .page {
+    padding-top: 10rem;
+
+    @media #{$small} {
+      padding-top: 6rem;
+    }
+  }
+  
   .page-content {
     width: 100%;
     min-height: 100vh;
@@ -131,6 +140,7 @@
   
   .page-heading {
     @include relative-font-size(2);
+    font-weight: 500;
   }
 
   .post {
@@ -227,4 +237,18 @@
     @media #{$small} {
       height: 67px;
     }
+  }
+
+
+  #toggle-dark-theme {
+    cursor: pointer;
+  }
+  #theme-icon {
+    color: rgb(255, 217, 0);
+  }
+
+  .construction {
+    @include relative-font-size(1.625);
+    font-weight: 700;
+    color: red;
   }
