--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -123,7 +123,7 @@ footer {
         }
 
         a {
-          @include transition;
+          @include all-transition;
           text-decoration: none;
           display: block;
           padding: $spacing-unit / 4;
