--- a/_sass/utils/_colors.scss
+++ b/_sass/utils/_colors.scss
@@ -6,7 +6,7 @@ $accent-color: #d4385a !default;
 $visited-accent-color: #f0d9de !default;
 
 $grey-color: #818181 !default;
-$grey-color-light: lighten($grey-color, 40%) !default;
+$grey-color-light: lighten($grey-color, 30%) !default;
 $grey-color-dark: darken($grey-color, 25%) !default;
 $orange-color: #f6410a !default;
 
@@ -15,5 +15,8 @@ $orange-color: #f6410a !default;
   */
 $dark-background-color: rgba(5, 3, 1, .98);
 $transparent-dark-background-color: rgba(5, 3, 1, 0.80);
-$page-content-color: #fdfdfd !default;
+$page-content-color: #f5f5f5 !default;
 $accent-background-color: #d4385a;
+
+
+$codeblock-background: #333333;
