--- a/_sass/utils/_mixins.scss
+++ b/_sass/utils/_mixins.scss
@@ -1,5 +1,9 @@
-@mixin transition {
+@mixin all-transition {
     transition: all 0.5s ease;
+}
+
+@mixin color-transition {
+    transition: color 0.3s ease;
 }
 
 @mixin delicate {
@@ -7,6 +11,13 @@
     font-weight: 300;
     letter-spacing: 1px;
     text-transform: uppercase;
+}
+
+//https://www.toptal.com/designers/htmlarrows/symbols/
+@mixin bar-separator {
+    margin: 0 $big-gap;
+    font-weight: 900;
+    content: '\02758';
 }
 
 @mixin dot {
