--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -179,6 +179,14 @@
    @include color-transition;
 
    text-decoration: none;
+   -webkit-touch-callout: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+   -webkit-tap-highlight-color: transparent;
+
 
    &.title {
      color: $grey-color-light;
